# chdb

./: .gitignore  CMakeLists.txt  INSTALL.txt  Makefile  README.md  basicscheduler.cpp  basicscheduler.hpp  chdb.cpp  constypes.hpp  detect-mpi.sh  directories.cpp  directories.hpp  env.sh.tmpl  install.sh  parameters.cpp  parameters.hpp  scheduler.cpp  scheduler.hpp  system.cpp  system.hpp  usingbdbh.cpp  usingbdbh.hpp  usingfs.cpp  usingfs.hpp  version.hpp
bdbh/: Makefile  bdbh.cpp  chmod.cpp  chmod.hpp  command.cpp  command.hpp  constypes.hpp  create.cpp  create.hpp  exception.hpp  ls.cpp  ls.hpp  merge.cpp  merge.hpp  parameters.cpp  parameters.hpp  put.cpp  put.hpp  random_name.cpp  read.cpp  read.hpp  rm.cpp  rm.hpp  test.py  test.sh  write.cpp  write.hpp
bdbh/gtests/: Makefile  bdbh_unittest.cpp  constypes_unittest.cpp  constypes_unittest.hpp
ftests/bdbh_hello/: hello.cpp  script.sh
ftests/bdbh_hello/input/: file-3.txt  file-7.txt
ftests/hello/: hello.cpp  script.sh
ftests/hello-with-sleep/: a.out  hello.cpp  script.sh
ftests/hello-with-sleep/input/: file-1.txt  file-10.txt  file-4.txt  file-9.txt
ftests/hello/input/: file-5.txt  file-8.txt
ftests/hellompi/: hello.cpp  sbatch.sh  script.sh
ftests/hellompi/input/: file-2.txt  file-6.txt
gtests/: Makefile  README.txt  buffer_unittest.cpp  chdb_unittest.cpp  constypes_unittest.cpp  constypes_unittest.hpp  directories_unittest.cpp  ext_cmd.sh  ext_cmd_with_rank.sh  gtest_main_mpi.cc  parameters_unittest.cpp  scheduler_unittest.cpp  system_unittest.cpp
gtests/uml/: class.uml  class1.uml  class2.uml  class3.uml
modulefiles/chdb/bullxmpi/: 0.65  0.66  0.75  VERSION
modulefiles/chdb/intelmpi/: 0.65  0.66  0.75  1.0.0  1.0.1  1.0.2  VERSION
molscript/: LISEZ.MOI  molauto  molscript  molscript-mpirun.bash  molscript.bash
molscript/pdb/a1/: pdb2a12.ent  pdb2a16.ent
molscript/pdb/a2/: pdb1a20.ent
molscript/pdb/a4/: pdb2a34.ent
molscript/pdb/a5/: pdb2a5n.ent
molscript/pdb/a6/: pdb2a6f.ent  pdb2a6g.ent
molscript/pdb/a7/: pdb2a7z.ent
molscript/pdb/cg/: pdb2cgm.ent
molscript/pdb/eq/: pdb1eqi.ent
molscript/pdb/ex/: pdb2exp.ent  pdb2exq.ent
molscript/pdb/gs/: pdb1gs2.ent  pdb2gs1.ent
molscript/pdb/h2/: pdb2h20.ent
molscript/pdb/h4/: pdb2h4d.ent
molscript/pdb/h6/: pdb2h69.ent
molscript/pdb/hz/: pdb1hz7.ent
molscript/pdb/kp/: pdb1kp1.ent
molscript/pdb/li/: pdb1lim.ent
molscript/pdb/lu/: pdb1lu6.ent  pdb1lu7.ent  pdb1lub.ent  pdb1luo.ent  pdb1lut.ent
molscript/pdb/mj/: pdb1mj6.ent
molscript/pdb/ov/: pdb1ov0.ent  pdb1ov1.ent  pdb1ovc.ent  pdb1ovi.ent
molscript/pdb/ox/: pdb1ox2.ent
molscript/pdb/y9/: pdb1y9c.ent  pdb1y9n.ent  pdb1y9p.ent  pdb1y9v.ent  pdb1y9y.ent
molscript/pdb/zt/: pdb1zti.ent
slave-wrapper/bullxmpi/: chdb  slave-wrapper.sh
slave-wrapper/intelmpi/: chdb  slave-wrapper.sh
src/: basicscheduler.cpp  basicscheduler.hpp  chdb.cpp  constypes.hpp  directories.cpp  directories.hpp  parameters.cpp  parameters.hpp  scheduler.cpp  scheduler.hpp  system.cpp  system.hpp  usingfs.cpp  usingfs.hpp  version.hpp
uml/: README.txt  chdb.xmi  class.uml  seq-basic-bdbh.uml
wrapper/: chdb  env-wrapper.sh  mod-wrapper.sh  slave-intelmpi-wrapper.sh  slave-openmpi-wrapper.sh  snippet-wrapper.sh
wrapper/bullxmpi/: chdb  env-wrapper.sh  mod-wrapper.sh  slave-wrapper.sh
wrapper/intelmpi/: chdb  slave-wrapper.sh
wrapper/openmpi/: chdb  slave-wrapper.sh
